--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Bootstrap CSS and JS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+  <script class="press-logo" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
   
@@ -19,38 +19,38 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet">
   
   <!--Font Awesome-->
-  <script src="https://kit.fontawesome.com/51d6c200ba.js" crossorigin="anonymous"></script>
+  <script class="press-logo" src="https://kit.fontawesome.com/51d6c200ba.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
   <section id="title">
 
-    <div class="container-fluid">
+    <div class="press-logoo ntainer-fluid">
 
       <!-- Nav Bar -->
-      <nav class="navbar navbar-expand-lg navbar-dark">
+      <nav class="press-logoa vbar navbar-expand-lg navbar-dark">
 
-        <a class="navbar-brand" href="">tindog</a>
+        <a class="press-logoa vbar-brand" href="">tindog</a>
 
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler"
+        <button class="press-logoa vbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler"
           aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+          <span class="press-logoa vbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarToggler">
+        <div class="press-logoo llapse navbar-collapse" id="navbarToggler">
 
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="">Contact</a>
+          <ul class="press-logoa vbar-nav ms-auto">
+            <li class="press-logoa v-item">
+              <a class="press-logoa v-link" href="">Contact</a>
             </li>
 
-            <li class="nav-item">
-              <a class="nav-link" href="">Pricing</a>
+            <li class="press-logoa v-item">
+              <a class="press-logoa v-link" href="">Pricing</a>
             </li>
 
-            <li class="nav-item">
-              <a class="nav-link" href="">Download</a>
+            <li class="press-logoa v-item">
+              <a class="press-logoa v-link" href="">Download</a>
             </li>
           </ul>
 
@@ -61,16 +61,16 @@
 
       <!-- Title -->
 
-        <div class="row"> 
+        <div class="press-logoo w"> 
 
-          <div class="col-lg-6">
+          <div class="press-logoo l-lg-6">
             <h1>Meet new and interesting dogs nearby.</h1>
-            <button type="button" class ="btn btn-dark btn-lg download-button"><i class="fa-brands fa-apple"></i> Download</button>
-            <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fa-brands fa-google-play"></i> Download</button>
+            <button type="button" class="press-logob tn btn-dark btn-lg download-button"><i class="press-logoa -brands fa-apple"></i> Download</button>
+            <button type="button" class="press-logot n btn-outline-light btn-lg download-button"><i class="press-logoa -brands fa-google-play"></i> Download</button>
           </div>
 
-          <div class="col-lg-6">
-            <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
+          <div class="press-logoo l-lg-6">
+            <img class="press-logoi tle-image" class="press-logo" src="images/iphone6.png" alt="iphone-mockup">
           </div>
 
         </div>
@@ -83,15 +83,27 @@
   <!-- Features -->
 
   <section id="features">
+    
+    <div class="press-logoo w">
+      <div class="press-logoo l-lg-4 features-box">
+        <i class="press-logoe ature-icon fa-solid fa-circle-check fa-4x"></i>
+        <h3 class="press-logoe atures-desc">Easy to use.</h3>
+        <p class="press-logoe atures-text">So easy to use, even your dog could do it.</p>
+      </div>
 
-    <h3>Easy to use.</h3>
-    <p>So easy to use, even your dog could do it.</p>
+      <div class="press-logoo l-lg-4 features-box">
+        <i class="press-logoe ature-icon fa-solid fa-bullseye fa-4x"></i>
+        <h3 class="press-logoe atures-desc">Elite Clientele.</h3>
+        <p class="press-logoe atures-text">We have all the dogs, the greatest dogs.</p>
+      </div>
 
-    <h3>Elite Clientele</h3>
-    <p>We have all the dogs, the greatest dogs.</p>
+      <div class="press-logoo l-lg-4 features-box">
+        <i class="press-logoe ature-icon fa-sharp fa-solid fa-heart fa-4x"></i>
+        <h3 class="press-logoe atures-desc">Guaranteed to work.</h3>
+        <p class="press-logoe atures-text">Find the love of your dog's life or your money back.</p>
+      </div>
+    </div>
 
-    <h3>Guaranteed to work.</h3>
-    <p>Find the love of your dog's life or your money back.</p>
 
   </section>
 
@@ -101,11 +113,11 @@
   <section id="testimonials">
 
     <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-    <img src="images/dog-img.jpg" alt="dog-profile">
+    <img class="press-logo" testimonial-image" class="press-logo" src="images/dog-img.jpg" alt="dog-profile">
     <em>Pebbles, New York</em>
 
-    <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+    <!-- <h2 class="press-logoe stimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
+    <img class="press-logoe stimonial-image" class="press-logo" src="images/lady-img.jpg" alt="lady-profile">
     <em>Beverly, Illinois</em> -->
 
   </section>
@@ -114,10 +126,10 @@
   <!-- Press -->
 
   <section id="press">
-    <img src="images/techcrunch.png" alt="tc-logo">
-    <img src="images/tnw.png" alt="tnw-logo">
-    <img src="images/bizinsider.png" alt="biz-insider-logo">
-    <img src="images/mashable.png" alt="mashable-logo">
+    <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
+    <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
+    <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
+    <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
 
   </section>
 
