--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
           <h1>Meet new and interesting dogs nearby.</h1>
           <button type="button" class="btn btn-dark btn-lg download-button"><i class="fa-brands fa-apple"></i>
             Download</button>
-          <button type="button" class="btn btn-outline-light btn-lg download-button"><i
+          <button type="button" class="btn btn-light btn-lg download-button"><i
               class="fa-brands fa-google-play"></i> Download</button>
         </div>
 
-        <div class="col col-lg-6 col-md-12">
+        <div class="col col-lg-6 col-md-12 col-sm-12">
           <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
         </div>
 
@@ -234,8 +234,8 @@
   <section id="cta">
 
     <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <button type="button" class="btn btn-dark btn-lg download-button"><i class="fa-brands fa-apple"></i>Download</button>
+    <button type="button" class="btn btn-light btn-lg download-button"><i class="fa-brands fa-google-play"></i> Download</button>
 
   </section>
 
