--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body>
 
-  <section id="title">
+  <section class="colored-section" id="title">
 
     <div class="container-fluid">
 
@@ -45,15 +45,15 @@
 
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="">Contact</a>
+              <a class="nav-link" href="#footer">Contact</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="">Pricing</a>
+              <a class="nav-link" href="#pricing">Pricing</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="">Download</a>
+              <a class="nav-link" href="#cta">Download</a>
             </li>
           </ul>
 
@@ -67,11 +67,11 @@
       <div class="row">
 
         <div class="col-above col col-lg-6 col-md-12">
-          <h1>Meet new and interesting dogs nearby.</h1>
+          <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
           <button type="button" class="btn btn-dark btn-lg download-button"><i class="fa-brands fa-apple"></i>
             Download</button>
-          <button type="button" class="btn btn-light btn-lg download-button"><i
-              class="fa-brands fa-google-play"></i> Download</button>
+          <button type="button" class="btn btn-light btn-lg download-button"><i class="fa-brands fa-google-play"></i>
+            Download</button>
         </div>
 
         <div class="col col-lg-6 col-md-12 col-sm-12">
@@ -87,62 +87,61 @@
 
   <!-- Features -->
 
-  <section id="features">
+  <section class="white-section" id="features">
 
-    <div class="row">
-      <div class="col-lg-4 features-box">
-        <i class="feature-icon fa-solid fa-circle-check fa-4x"></i>
-        <h3 class="feature-desc">Easy to use.</h3>
-        <p class="feature-text">So easy to use, even your dog could do it.</p>
-      </div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-4 features-box">
+          <i class="feature-icon fa-solid fa-circle-check fa-4x"></i>
+          <h3 class="feature-desc">Easy to use.</h3>
+          <p class="feature-text">So easy to use, even your dog could do it.</p>
+        </div>
 
-      <div class="col-lg-4 features-box">
-        <i class="feature-icon fa-solid fa-bullseye fa-4x"></i>
-        <h3 class="feature-desc">Elite Clientele.</h3>
-        <p class="feature-text">We have all the dogs, the greatest dogs.</p>
-      </div>
+        <div class="col-lg-4 features-box">
+          <i class="feature-icon fa-solid fa-bullseye fa-4x"></i>
+          <h3 class="feature-desc">Elite Clientele.</h3>
+          <p class="feature-text">We have all the dogs, the greatest dogs.</p>
+        </div>
 
-      <div class="col-lg-4 features-box">
-        <i class="feature-icon fa-sharp fa-solid fa-heart fa-4x"></i>
-        <h3 class="feature-desc">Guaranteed to work.</h3>
-        <p class="feature-text">Find the love of your dog's life or your money back.</p>
+        <div class="col-lg-4 features-box">
+          <i class="feature-icon fa-sharp fa-solid fa-heart fa-4x"></i>
+          <h3 class="feature-desc">Guaranteed to work.</h3>
+          <p class="feature-text">Find the love of your dog's life or your money back.</p>
+        </div>
       </div>
     </div>
-
   </section>
 
 
   <!-- Testimonials -->
 
-  <section id="testimonials">
+  <section class="colored-section" id="testimonials">
 
-    <div id="carouselExampleIndicators" class="carousel slide">
+    <div id="testimonial-carousel" class="carousel slide">
       <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+        <button type="button" data-bs-target="#testimonial-carousel" data-bs-slide-to="0" class="active"
           aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-          aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#testimonial-carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
       </div>
       <div class="carousel-inner">
-        <div class="carousel-item active">
-          <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+        <div class="carousel-item active container-fluid">
+          <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on
+            TinDog. Woof.</h2>
           <img class="press-logo testimonial-image" class="press-logo" src="images/dog-img.jpg" alt="dog-profile">
           <em>Pebbles, New York</em>
         </div>
-        <div class="carousel-item">
+        <div class="carousel-item container-fluid">
           <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of
             their life. I think.</h2>
           <img class="press-logo testimonial-image" class="press-logo" src="images/lady-img.jpg" alt="lady-profile">
           <em>Beverly, Illinois</em>
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-        data-bs-slide="prev">
+      <button class="carousel-control-prev" type="button" data-bs-target="#testimonial-carousel" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
       </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-        data-bs-slide="next">
+      <button class="carousel-control-next" type="button" data-bs-target="#testimonial-carousel" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
@@ -156,7 +155,7 @@
 
   <!-- Press -->
 
-  <section id="press">
+  <section class="colored-section" id="press">
     <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
     <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
     <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
@@ -167,9 +166,9 @@
 
   <!-- Pricing -->
 
-  <section id="pricing">
+  <section class="white-section" id="pricing">
 
-    <h2>A Plan for Every Dog's Needs</h2>
+    <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
     <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
@@ -179,7 +178,7 @@
             <h4 class="my-0 fw-normal">Chihuahua</h4>
           </div>
           <div class="card-body">
-            <h1 class="card-title pricing-card-title">Free</h1>
+            <h1 class="price-text card-title pricing-card-title">Free</h1>
             <ul class="list-unstyled mt-3 mb-4">
               <li>5 Matches Per Day</li>
               <li>10 Messages Per Day</li>
@@ -196,7 +195,7 @@
             <h4 class="my-0 fw-normal">Labrador</h4>
           </div>
           <div class="card-body">
-            <h1 class="card-title pricing-card-title">$49<small class="text-muted fw-light">/mo</small></h1>
+            <h1 class="price-text card-title pricing-card-title">$49<small class="text-muted fw-light">/mo</small></h1>
             <ul class="list-unstyled mt-3 mb-4">
               <li>Unlimited Matches</li>
               <li>Unlimited Messages</li>
@@ -213,7 +212,7 @@
             <h4 class="my-0 fw-normal">Mastiff</h4>
           </div>
           <div class="card-body">
-            <h1 class="card-title pricing-card-title">$99<small class="text-muted fw-light">/mo</small></h1>
+            <h1 class="price-text card-title pricing-card-title">$99<small class="text-muted fw-light">/mo</small></h1>
             <ul class="list-unstyled mt-3 mb-4">
               <li>Priority Listing</li>
               <li>Unlimited Matches</li>
@@ -231,21 +230,28 @@
 
   <!-- Call to Action -->
 
-  <section id="cta">
+  <section class="colored-section" id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button" class="btn btn-dark btn-lg download-button"><i class="fa-brands fa-apple"></i>Download</button>
-    <button type="button" class="btn btn-light btn-lg download-button"><i class="fa-brands fa-google-play"></i> Download</button>
-
+    <div class="container-fluid">
+      <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
+      <button type="button" class="btn btn-dark btn-lg download-button"><i
+          class="fa-brands fa-apple"></i>Download</button>
+      <button type="button" class="btn btn-light btn-lg download-button"><i class="fa-brands fa-google-play"></i>
+        Download</button>
+    </div>
   </section>
 
 
   <!-- Footer -->
 
-  <footer id="footer">
-
-    <p>© Copyright TinDog</p>
-
+  <footer class="white-section" id="footer">
+    <div class="container-fluid">
+      <i class="social-icon fa-brands fa-facebook"></i>
+      <i class="social-icon fa-brands fa-twitter"></i>
+      <i class="social-icon fa-brands fa-instagram"></i>
+      <i class="social-icon fa-solid fa-envelope"></i>
+      <p>© Copyright TinDog</p>
+    </div>
   </footer>
 
 
